# cwtoolbox

./: .gitignore  README.md  pyproject.toml
.reuse/: dep5
LICENSES/: MIT.txt
cwtoolbox/: __init__.py  analyze.py
cwtoolbox/cw/: __init__.py  generic_simpleserial.c.j2  simpleserial.mak
cwtoolbox/rainbow/: __init__.py  coeffs.txt
examples/: capture.ipynb
tests/: __init__.py  conftest.py  test_capture_device.py
tools/: style_and_lint.sh
