# SPDX-FileCopyrightText: 2023 Stefan Hackenberg
#
# SPDX-License-Identifier: MIT

[project]
name = "cwtoolbox"
version = "0.10.5"
description = "ChipWhisperer Toolbox"
authors = [
    { "name" = "Stefan Hackenberg", "email" = "mail@stefan-hackenberg.de" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lascar>=1.1",
    "numpy>=2.0.2",
    "chipwhisperer>=5.7.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.1",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "types-tqdm>=4.66.0.20240417",
]
examples = ["jupyter>=1.1.1", "plotly>=5.24.1"]

[project.scripts]
cw_xmlrpc_server = "cwtoolbox.bin.cw_xmlrpc_server:main"

[tool.pdm]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
allow_redefinition = true

[[tool.mypy.overrides]]
module = ["lascar", "numba"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["chipwhisperer", "chipwhisperer_device"]

[tool.ruff]
line-length = 100
indent-width = 4
[tool.ruff.lint]
select = ["E", "F", "I", "PL", "W"]
